change the quote

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <div class="col s6">
             <img src="{{user.photo1}}" width="300px" class="responsive-img" alt="" srcset="" ></div>
             <div class="col s6">
-             <h3 class="quote" class="col s6">"{{user.quote}}"</h3></div>
+             <h3 class="quote" class="col s6">"{{user.quote}}" - <i>{{user.author}}</i></h3></div>
                  </span> 
               </div>
             </div>
